syntax = "proto3";

package envoy.config.filter.network.kafka_broker.v2alpha;

option java_outer_classname = "KafkaBrokerProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.filter.network.kafka_broker.v2alpha";

import "validate/validate.proto";

// [#protodoc-title: Kafka Broker]
// Kafka Broker :ref:`configuration overview <config_network_filters_kafka_broker>`.
// [#extension: envoy.filters.network.kafka_broker]

message KafkaBroker {
  // The prefix to use when emitting :ref:`statistics <config_network_filters_kafka_broker_stats>`.
  string stat_prefix = 1 [(validate.rules).string = {min_bytes: 1}];
}
